--- a/ControllerProject/app/src/main/AndroidManifest.xml
+++ b/ControllerProject/app/src/main/AndroidManifest.xml
@@ -2,17 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.controllerproject">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.ControllerProject">
+        <activity android:name=".notify.NotificationActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -21,12 +24,12 @@
             android:name=".ControllerProvider"
             android:authorities="com.example.controllerproject.ControllerProvider"
             android:exported="true" />
-        <provider
-            android:name=".ControllerProvider2"
-            android:authorities="com.example.controllerproject.ControllerProvider2"
-            android:exported="true" />
 
-
+        <service android:name=".notify.MyMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
