client update data at a same time in controller no overlap

--- a/ClientProject2/app/src/main/AndroidManifest.xml
+++ b/ClientProject2/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
             </intent-filter>
         </service>
 
+        <service android:name=".OperationService"/>
+
+
     </application>
 
 </manifest>
