--- a/ClientProject3/app/src/main/AndroidManifest.xml
+++ b/ClientProject3/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
             </intent-filter>
         </service>
 
+        <service android:name=".OperationService"/>
+
     </application>
 
 </manifest>
