--- a/ClientProject1/app/build.gradle
+++ b/ClientProject1/app/build.gradle
@@ -40,4 +40,11 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
 
+    implementation 'com.android.volley:volley:1.2.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    def multidex_version = "2.0.1"
+    implementation "androidx.multidex:multidex:$multidex_version"
+
 }
