--- a/ControllerProject/app/build.gradle
+++ b/ControllerProject/app/build.gradle
@@ -50,8 +50,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:20.0.3'
 //    implementation 'com.google.firebase:firebase-admin:7.1.1'
 
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+//    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.android.volley:volley:1.2.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    def multidex_version = "2.0.1"
+    implementation "androidx.multidex:multidex:$multidex_version"
+
 
 
 
