--- a/ClientProject1/app/build.gradle
+++ b/ClientProject1/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.clientproject1"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -46,5 +46,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
+
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.6'
+    implementation 'androidx.work:work-runtime:2.5.0'
+
+
 
 }
