--- a/ClientProject3/app/src/main/AndroidManifest.xml
+++ b/ClientProject3/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
     <uses-permission android:name="android.permission.SET_ALARM"/>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
 
 
     <application
@@ -23,15 +24,15 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".MyMessagingService">
+        <service android:name=".service.MyMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
-        <service android:name=".OperationService"/>
+        <service android:name=".service.OperationService"/>
         <receiver
-            android:name=".AlarmTriggerBroadcastReceiver"
+            android:name=".service.AlarmTriggerBroadcastReceiver"
             android:process=":remote">
 
             <intent-filter>
@@ -44,7 +45,7 @@
         </receiver>
 
         <service
-            android:name=".TestJobService"
+            android:name=".service.TestJobService"
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
